consul-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: consul-gateway
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    # hostname: productpage.local
    allowedRoutes:
      namespaces:
        from: "All" # Allow routes from all namespaces
