consul-gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo-http-route
  namespace: default
spec:
  hostnames:
  - "productpage.local"

  parentRefs:
  - name: consul-gateway # Reference to the Gateway
    namespace: consul

  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /

    backendRefs:
    - kind: Service
      name: productpage
      port: 9080
      #namespace: default
