consul-gateway/http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: default
spec:
  hostnames:
  - "productpage.local"

  parentRefs:
  - name: consul-gateway  # Changed from "bookinfo-gateway"
    namespace: consul

  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /productpage
    - path: 
        type: PathPrefix
        value: /static
    - path: 
        type: PathPrefix
        value: /login
    - path: 
        type: PathPrefix
        value: /logout
    - path: 
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - kind: Service
      name: productpage
      port: 9080

  - matches:
    - path: 
        type: PathPrefix
        value: /details
    backendRefs:
    - kind: Service
      name: details
      port: 9080

  - matches:
    - path: 
        type: PathPrefix
        value: /reviews
    backendRefs:
    - kind: Service
      name: reviews
      port: 9080
      
  - matches:
    - path: 
        type: PathPrefix
        value: /ratings
    backendRefs:
    - kind: Service
      name: ratings
      port: 9080  # Fixed from "908"
